--- a/Workflow.bib
+++ b/Workflow.bib
@@ -1284,3 +1284,43 @@ year = {2015}
   journal = {Bioinformatics},
   year = {2016},
 }
+
+@article{Carroll2005,
+  title = {Measurement {{Error}} in {{Epidemiologic Studies}}},
+  author = {Carroll, Raymond J},
+  year = {2005},
+  pages = {38},
+  abstract = {This article concerns measurement error in epidemilogic studies, often called errors-in-variables. I discuss what measurement error is, its impact on parameter estimates and hypothesis tests, and how to perform statistical analyses that account for the measurement error.},
+  file = {/home/alan/Zotero/storage/PPHYZWTG/Carroll - 2005 - Measurement Error in Epidemiologic Studies.pdf},
+  language = {en}
+}
+
+@article{Ziegler1994,
+  title = {The Activation Antigen {{CD69}}},
+  author = {Ziegler, Steven F. and Ramsdell, Fred and Alderson, Mark R.},
+  year = {1994},
+  volume = {12},
+  pages = {456--465},
+  issn = {10665099, 15494918},
+  doi = {10.1002/stem.5530120502},
+  abstract = {One of the earliest cell surface antigens expressed by T cells following activation is CD69, which is detectable within one h of ligation of the T cell receptorKD3 complex. Once expressed, CD69 acts as a costimulatory molecule for T cell activation and proliferation. In addition to mature T cells, CD69 is inducibly expressed by immature thymocytes, B cells, natural killer (NK) cells, monocytes, neutrophils and eosinophils, and is constitutively expressed by mature thymocytes and platelets. Recently, cDNA clones encoding human and mouse CD69 were isolated and showed CD69 to be a member of the C-type lectin superfamily. Gene mapping studies have placed CD69 on distal mouse chromosome 6 and human chromosome 1 2 \textasciitilde{} 1 3c,lose to, if not in, the NK gene complex. The structure, chromosomal localization, expression and function of CD69 suggest that it is likely a pleiotropic immune regulator, potentially important not only in NK cell function but also in the activation and differentiation of a wide variety of hematopoietic cells.},
+  file = {/home/alan/Zotero/storage/6QNQBXY2/Ziegler et al. - 1994 - The activation antigen CD69.pdf},
+  journal = {Stem Cells},
+  language = {en},
+  number = {5}
+}
+
+@article{Svensson2018,
+  title = {Exponential Scaling of Single-Cell {{RNA}}-Seq in the Past Decade},
+  author = {Svensson, Valentine and {Vento-Tormo}, Roser and Teichmann, Sarah A},
+  year = {2018},
+  month = apr,
+  volume = {13},
+  pages = {599--604},
+  issn = {1754-2189, 1750-2799},
+  doi = {10.1038/nprot.2017.149},
+  file = {/home/alan/Zotero/storage/77G2MMA2/Svensson et al. - 2018 - Exponential scaling of single-cell RNA-seq in the .pdf},
+  journal = {Nature Protocols},
+  language = {en},
+  number = {4}
+}
